--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -5,18 +5,22 @@ Vagrant.configure("2") do |config|
   config.vm.define "server" do |server|
     server.vm.hostname = "server"
     server.vm.box = "ubuntu/focal64"
-    server.vm.network :private_network, ip: "10.0.0.101"
+    server.vm.network "private_network", ip: "192.168.56.101"
   end
 
   #client
   config.vm.define "client" do |client|
     client.vm.hostname = "client"
     client.vm.box = "ubuntu/focal64"
-    client.vm.network :private_network, ip: "10.0.0.102"
+    client.vm.network "private_network", ip: "192.168.56.102"
   end
   config.ssh
   config.vm.synced_folder '.', '/vagrant', disabled: true
 
+  # Provisioning to enable password authentication in SSH
+  config.vm.provision "shell", inline: <<-SHELL
+    sudo apt-get update
+  SHELL
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
