--- a/vagrant/study-vms/Vagrantfile
+++ b/vagrant/study-vms/Vagrantfile
@@ -1,34 +1,27 @@
 Vagrant.configure("2") do |config|
-  config.vm.box_check_update = false
-
-  #server 
-  config.vm.define "server" do |server|
-    server.vm.hostname = "server"
-    server.vm.box = "ubuntu/focal64"
-    server.vm.network "private_network", ip: "192.168.56.101"
-  end
-
-  #client
-  config.vm.define "client" do |client|
-    client.vm.hostname = "client"
-    client.vm.box = "ubuntu/focal64"
-    client.vm.network "private_network", ip: "192.168.56.102"
-  end
-  config.ssh
-  config.vm.synced_folder '.', '/vagrant', disabled: true
-
-  # Provisioning to enable password authentication in SSH
-  config.vm.provision "shell", inline: <<-SHELL
-    sudo apt-get update
-  SHELL
-  # Enable provisioning with a shell script. Additional provisioners such as
-  # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
-  # documentation for more information about their specific syntax and use.
-  config.vm.provider "virtualbox" do |vb|
-     vb.gui = false
-     vb.memory = "1024"
-     vb.cpus = 1
-  end
+    # Define the base box
+    config.vm.box = "ubuntu/jammy64"
+    
+    # prometheus VM
+    config.vm.define "prometheus" do |prometheus|
+        prometheus.vm.hostname = "prometheus"
+        prometheus.vm.network "public_network", bridge: "Intel(R) Ethernet Connection", adapter: 2
+        prometheus.vm.provider "virtualbox" do |vb|
+            vb.memory = "3072"
+            vb.cpus = 2
+        end
+        prometheus.vm.provision "shell", inline: "sudo apt-get update && sudo apt-get upgrade -y"
+        prometheus.vm.network "forwarded_port", guest: 9090, host: 1234
+    end
+    
+    # Node VM
+    config.vm.define "node1" do |node|
+        node.vm.hostname = "node1"
+        node.vm.network "public_network" , bridge: "Intel(R) Ethernet Connection", adapter: 2
+        node.vm.provider "virtualbox" do |vb|
+            vb.memory = "1024"
+            vb.cpus = 1
+        end
+        node.vm.provision "shell", inline: "sudo apt-get update && sudo apt-get upgrade -y"
+    end
 end
-
- 
