--- a/05-networking/scripts/frr/r1/frr.conf
+++ b/05-networking/scripts/frr/r1/frr.conf
@@ -1,5 +1,8 @@
 # /etc/frr/frr.conf 
+log syslog informational
 hostname r1
+!
+ip prefix-list ALLOW-ALL permit 0.0.0.0/0 le 32
 !
 router bgp 65001
  bgp router-id 192.255.255.1
@@ -7,7 +10,8 @@ router bgp 65001
  !
  address-family ipv4 unicast
   neighbor 192.255.255.2 activate
+  neighbor 192.255.255.2 prefix-list ALLOW-ALL in
+  neighbor 192.255.255.2 prefix-list ALLOW-ALL out
   network 192.255.255.0/24
  exit-address-family
 !
-log file /var/log/frr/frr.log
