--- a/05-networking/scripts/frr/r2/frr.conf
+++ b/05-networking/scripts/frr/r2/frr.conf
@@ -1,13 +1,16 @@
 # /etc/frr/frr.conf 
+log syslog informational
 hostname r2
 !
+ip prefix-list ALLOW-ALL permit 0.0.0.0/0 le 32
 router bgp 65002
  bgp router-id 192.255.255.2
  neighbor 192.255.255.1 remote-as 65001
  !
  address-family ipv4 unicast
-  neighbor 192.255.255.1 activate
+  neighbor 192.255.255.1 prefix-list PERMITIR-TUDO in
+  neighbor 192.255.255.1 prefix-list PERMITIR-TUDO out
   network 192.255.255.0/24
+  network 10.0.0.1/32
  exit-address-family
 !
-log file /var/log/frr/frr.log
